<resources>
    <string name="app_name">Log My Work</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="log">Log</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="createBtn">Create Job</string>
    <string name="jobTitle">Job Title</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date (if applicable)</string>
    <string name="add">Add</string>

</resources>